force-app/main/default/objects/Indicador_valor__c/Indicador_valor__c.object-meta.xml
<CustomObject>
    <label>Indicador valor</label>
    <nameField>
        <displayFormat>INDVAL-{00000}</displayFormat>
        <label>Indicador valor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicadores valores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>