force-app/main/default/objects/Indicador_valor__c/fields/Coeficiente_provisorio__c.field-meta.xml
<CustomField>
    <fullName>Coeficiente_provisorio__c</fullName>
    <label>Coeficiente provisorio</label>
    <length>2</length>
    <type>Text</type>
</CustomField>