force-app/main/default/objects/Indicador_valor__c/fields/Indicador__c.field-meta.xml
<CustomField>
    <fullName>Indicador__c</fullName>
    <label>Indicador</label>
    <referenceTo>Indicador__c</referenceTo>
    <relationshipLabel>Indicadores valores</relationshipLabel>
    <relationshipName>Indicadores_valores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>