force-app/main/default/objects/Indicador_valor__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Periodo</label>
    <length>7</length>
    <type>Text</type>
</CustomField>