force-app/main/default/objects/Indicador_valor__c/fields/Porcentaje_incidencia__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_incidencia__c</fullName>
    <label>Porcentaje incidencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>