force-app/main/default/objects/Indicador_valor__c/fields/Valor_base__c.field-meta.xml
<CustomField>
    <fullName>Valor_base__c</fullName>
    <label>Valor base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>