force-app/main/default/objects/Indicador_valor__c/validationRules/Formato_periodo.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_periodo</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX( 
 Periodo__c  , 
&quot;^(\\d{2}\\-\\d{4})?$&quot; 
)</errorConditionFormula>
    <errorDisplayField>Periodo__c</errorDisplayField>
    <errorMessage>El formato valido es mm-yyyy</errorMessage>
</ValidationRule>