force-app/main/default/objects/Indicador_valor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Indicador__c</columns>
    <columns>Periodo__c</columns>
    <columns>Valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>